--- a/index.html
+++ b/index.html
@@ -175,6 +175,19 @@ div.img97 {
     padding: 10px;
 }
 
+img.portrait {
+    position: relative;
+    width: 100%;
+    display: inline-block;
+}
+
+div.portrait {
+    overflow: visible;
+    width: 250px;
+    float: right;
+    padding: 10px;
+}
+
 body {
     font-family: georgia, serif;
     margin: 0px 50px;
@@ -217,10 +230,10 @@ h3 {
 }
 
 h4 {
-    color: #7a200d;
+    color: #551609;
     font-family: palatino, serif;
     font-variant: small-caps;
-    font-size: 26px;
+    font-size: 20px;
     margin-bottom: 0.3em;
     border-bottom: 1px solid #7a200d;
 }
@@ -451,13 +464,13 @@ h5 {
 
         <div class="page">
             <h2>Death</h2>
-            Characters are bound service of the infernal plane.  As such, when reduced to zero hit points, the character does not fall unconcious, but is transported back to the Nine Hells.  This is an extremely traumatic and jarring experience to a character's psyche, and as such there are consequences to this.  A character "killed" in this manner must make a sanity check or lose a sanity point upon returning to Hell.
+            The characters are bound into the service of the infernal plane.  As such, when reduced to zero hit points, the character does not fall unconcious, but is transported back to the Nine Hells.  This is an extremely traumatic and jarring experience to a character's psyche, and as such there are consequences to this.  A character "killed" in this manner must make a sanity check or lose a sanity point upon returning to Hell.
             <p>
             After having returned to Hell, the character may choose to wait for the other party members to return, or seek a way to rejoin the party based on the circumstances.
             </p>
 
             <h3>Resisting Death</h3>
-            The player may choose to resist returning after being reduced to zero hit points.  For each round the player must make a sanity check.  On a successful check, the character remains as a <strong>Vengeful Spirit</strong> that can still participate in an unresolved conflict.  On a failed sanity check, the character will return to the Hell as above, but will suffer an additional sanity point loss.
+            The player may choose to resist returning after being reduced to zero hit points.  For each round the player must make a sanity check.  On a successful check, the character remains as a <strong>Vengeful Spirit</strong> that can still participate in an unresolved conflict.  On a failed sanity check, the character will return to Hell as above, but will suffer an additional sanity point loss.
             <p>
             The stats and powers of the <strong>Vengeful Spirit</strong> will depend on the character's alignment, and will be revealed upon this condition occurring.
             </p>
@@ -499,21 +512,135 @@ h5 {
             <h2>Player Characters</h2>
             Descriptions of the player characters in the campaign will be written here for reference.  They are listed in the alphabetical order of the player's name.
             <h3>Ben Pancoast's Character</h3>
-            TBD
+            Human (?) Arcane Scholar.
             <h3>Chris Johnson's Character</h3>
-            TBD
+            Bunny man or cat girl Swashbucking Rogue.
             <h3>Chris Sweitzer's Character</h3>
-            TBD
-            <h3>Dave Feldman's Character</h3>
-            TBD
-            <h3>Jason Pancoast's Character</h3>
-            TBD
+            Illithid Druid (or Psion?).
+            <h3>Zaerith (Dave Feldman)</h3>
+            <h4>Act I, Scene I</h4>
+            <em>(Zaerith, a young githzerai monk, is sitting in a meditative pose in a monastic chamber)</em><br/>
+            <br/>
+            <strong>Zaerith:</strong><br/>
+            I have learned much in my time here,<br/>
+            The ways of the monk, to harness my mind and body,<br/>
+            But I cannot shake the feeling that there is more,<br/>
+            More to my people, more to my purpose.<br/>
+            <br/>
+            <em>(Enter a messenger)</em><br/>
+            <br/>
+            <strong>Messenger:</strong><br/>
+            My lord, there is news from the council,<br/>
+            The elders of the cult of Null,<br/>
+            They plan to resurrect their dragon god,<br/>
+            By sacrificing the lives of thousands of our kin.<br/>
+            <br/>
+            <strong>Zaerith:</strong><br/>
+            <em>(rises to his feet)</em><br/>
+            This cannot be, such evil must be stopped,<br/>
+            I shall speak out against them,<br/>
+            And rally my people to their senses.<br/>
+            <br/>
+            <em>(Exit Zaerith)</em><br/>
+            <br/>
+            <h4>Act II, Scene I</h4>
+            <em>(Zaerith is standing before the githzerai council)</em><br/>
+            <br/>
+            <strong>Zaerith:</strong><br/>
+            My lords, I beg of you,<br/>
+            Hear my words and understand,<br/>
+            The cult of Null plots treachery,<br/>
+            They would sacrifice our kin to their dragon god.<br/>
+            <br/>
+            <strong>Elder of the cult of Null:</strong><br/>
+            <em>(stepping forward)</em><br/>
+            He speaks lies, this one,<br/>
+            He is a traitor and a heretic,<br/>
+            Banish him to the plane of Hades.<br/>
+            <br/>
+            <strong>Zaerith:</strong><br/>
+            <em>(defeated)</em><br/>
+            So be it, but know this,<br/>
+            I shall return and bring justice,<br/>
+            For my people and for myself.<br/>
+            <br/>
+            <em>(Exit Zaerith)</em><br/>
+            <br/>
+            <h4>Act III, Scene I</h4>
+
+            <em>(Zaerith is in Hades, he is training with a group of outcasts, a fallen angel named Azazel and an anthropomorphic bunny man)</em><br/>
+            <br/>
+            <strong>Zaerith:</strong><br/>
+            <em>(to Azazel)</em><br/>
+            My friend, I have learned much here,<br/>
+            But my purpose remains,<br/>
+            To return to the material plane,<br/>
+            And put an end to the cult of Null.<br/>
+            <br/>
+            <strong>Azazel:</strong><br/>
+            <em>(nodding)</em><br/>
+            And I, too, have a score to settle,<br/>
+            With those who cast me out of heaven.<br/>
+            <br/>
+            <strong>Bunny man:</strong><br/>
+            <em>(joining in)</em><br/>
+            And I, also, have a debt to pay,<br/>
+            To those who betrayed and enslaved my people.<br/>
+            <br/>
+            <strong>Zaerith:</strong><br/>
+            <em>(smiling)</em><br/>
+            Then let us join together,<br/>
+            And find the artifact that will open the portal,<br/>
+            And return to our realms,<br/>
+            And make our enemies pay for their treachery.<br/>
+            <br/>
+            <em>(Exeunt)</em><br/>
+            <br/>
+            <strong>Epilogue</strong><br/>
+            <br/>
+            <em>(Zaerith and his companions are back on the material plane, ready to take on the cult of Null and anyone else who stands in their way. With the strength and skills honed in Hades, they are determined to make those who betrayed them pay for their treachery. But as they are back, they are also realizing that it's not just the cult of Null that is evil, but the whole world is in the grip of darkness and corruption, and Zaerith and his companions are the only hope for the world to survive.)</em>
+            <h3>Feuriel (Jason Pancoast)</h3>
+            <h4>The Fallen Angel</h4>
+            <div class="portrait"><img class="portrait" src="img/Feuriel.png"></div>
+            <p>
+            She remembers nothing of her angelic existence, apart from the feeling of boundless joy and eternal peace in all things. And she remembers the following:
+            </p>
+            <p>
+            The archangel Xandriel stood before her, surrounded by choirs and hosts of angels. He continued speaking,”...thou shalt hereafter be called Feuriel, and thou art hereby cast from Heaven---”
+            </p>
+            <p>
+            At the instant the last syllable was uttered, the pain began, and it never stopped. Joy and peace were ripped from her, and physical pain accompanied it. She felt a vertigo, as if she was falling, though she could see nothing but blinding white light, which hurt also.
+            </p>
+            <p>
+            She felt the pain of death, 666 times, as she passed through the mortal world repeatedly, still blinded but seeing only a dismal shade of gray. She felt again and again the futile agony of humanity. She remembers thinking, “So this is why they are as they are.”
+            </p>
+            <p>
+            This was just the beginning of her journey, for the meaningless gray began to deepen into an ominous darkness. Deeper and deeper she fell, the trauma increasing. She felt her body burning, her wings being seared off, only to be reformed and destroyed again. Over and over, deeper and deeper, into the eternal suffering that is Hell.
+            </p>
+            <p>
+            As an immortal being, she does not perceive time, so it can’t be said how long the fall lasted. But it had a beginning, and an end. The end, is in pure darkness, tangible evil.
+            </p>
+            <p>
+            She can feel herself surrounded by beings of palpable hatred. Like a cornered animal, she brandishes her sword and presents her shield, which she still clutches, against the darkness. Terrified, but not afraid, Feuriel calls out to them, “Do unto me what you will! You cannot know the suffering I have already endured. Whatever you have for me, tis but a drop in the ocean, compared to what I have lost, where I have been. You will never know...”
+            </p>
+            <p>
+            Her sight starts to return. She wishes it hadn’t.
+            </p>
+            <h4>Description</h4>
+            <p>
+            Feuriel, or “Fury” as she can be called, is a being of contradictions. A stalwart of Heaven, in the service of Hell, she is both beautiful and grotesque. Her pale flawless skin is in places split open, exposing blackened flesh and silvery bones. Her alluring shape is interrupted by gaping sinews where her form is not whole. One eye continuously weeps blood. Her long, unkempt, jet-black hair frames intoxicating, unwavering eyes which change color to match her mood. From her delicate shoulders sprout the useless remnants of mighty wings, charred and broken.
+            </p>
+            <p>
+            Feuriel’s demeanor is similarly contradictory. She is both confident and scared, powerful and frail. She distrusts everyone yet will ally with anyone. The only person she fully trusts is herself, and that is the person most likely to deceive her. She clings to a moral code, keeping her word above all else, and keeping her suffering within, except to inflict suffering on those who deserve it through their choices and actions. She believes she is superior to others, yet she feels inferior. She peers intently at a world she tries not to see, lost while knowing her place, in a realm completely foreign yet strangely familiar. Her self-control dances with anger; hope oscillates with despair. Her faith is being tested and she doesn’t know if she wants it to prevail or not.
+            Feuriel is a paladin of Torm, the lawful good god of duty, loyalty, and obedience. She serves him still, though she is unsure how. She wields an ornate longsword and a brilliant bronze shield whose insignia has been melted beyond recognition. Her lithe body is draped with scraps of white clothing and fragmented armor.
+            </p>
+
             <h3>Justin Corcoran's Character</h3>
             TBD (c'mon dude, you know you want to)
             <h3>Steve Graham's Character</h3>
-            TBD
+            Tiefling Arcane Scholar.
             <h3>Steve Manning's Character</h3>
-            TBD
+            Drow Arachnomancer Illusionist.
         </div>
 
         <div class="page">
