Minor edits to Fury.

--- a/index.html
+++ b/index.html
@@ -602,37 +602,41 @@ h5 {
             <h3>Feuriel (Jason Pancoast)</h3>
             <h4>The Fallen Angel</h4>
             <div class="portrait"><img class="portrait" src="img/Feuriel.png"></div>
-            <p>
-            She remembers nothing of her angelic existence, apart from the feeling of boundless joy and eternal peace in all things. And she remembers the following:
-            </p>
-            <p>
-            The archangel Xandriel stood before her, surrounded by choirs and hosts of angels. He continued speaking,”...thou shalt hereafter be called Feuriel, and thou art hereby cast from Heaven---”
-            </p>
-            <p>
-            At the instant the last syllable was uttered, the pain began, and it never stopped. Joy and peace were ripped from her, and physical pain accompanied it. She felt a vertigo, as if she was falling, though she could see nothing but blinding white light, which hurt also.
-            </p>
-            <p>
-            She felt the pain of death, 666 times, as she passed through the mortal world repeatedly, still blinded but seeing only a dismal shade of gray. She felt again and again the futile agony of humanity. She remembers thinking, “So this is why they are as they are.”
-            </p>
-            <p>
-            This was just the beginning of her journey, for the meaningless gray began to deepen into an ominous darkness. Deeper and deeper she fell, the trauma increasing. She felt her body burning, her wings being seared off, only to be reformed and destroyed again. Over and over, deeper and deeper, into the eternal suffering that is Hell.
-            </p>
-            <p>
-            As an immortal being, she does not perceive time, so it can’t be said how long the fall lasted. But it had a beginning, and an end. The end, is in pure darkness, tangible evil.
-            </p>
-            <p>
-            She can feel herself surrounded by beings of palpable hatred. Like a cornered animal, she brandishes her sword and presents her shield, which she still clutches, against the darkness. Terrified, but not afraid, Feuriel calls out to them, “Do unto me what you will! You cannot know the suffering I have already endured. Whatever you have for me, tis but a drop in the ocean, compared to what I have lost, where I have been. You will never know...”
-            </p>
-            <p>
-            Her sight starts to return. She wishes it hadn’t.
-            </p>
+            <em>
+                <p>
+                She remembers nothing of her angelic existence, apart from the feeling of boundless joy and eternal peace in all things. And she remembers the following:
+                </p>
+                <p>
+                The archangel Xandriel stood before her, surrounded by choirs and hosts of angels. He continued speaking,”...thou shalt hereafter be called Feuriel, and thou art hereby cast from Heaven---”
+                </p>
+                <p>
+                At the instant the last syllable was uttered, the pain began, and it never stopped. Joy and peace were ripped from her, and physical pain accompanied it. She felt a vertigo, as if she was falling, though she could see nothing but blinding white light, which hurt also.
+                </p>
+                <p>
+                She felt the pain of death, 666 times, as she passed through the mortal world repeatedly, still blinded but seeing only a dismal shade of gray. She felt again and again the futile agony of humanity. She remembers thinking, “So this is why they are as they are.”
+                </p>
+                <p>
+                This was just the beginning of her journey, for the meaningless gray began to deepen into an ominous darkness. Deeper and deeper she fell, the trauma increasing. She felt her body burning, her wings being seared off, only to be reformed and destroyed again. Over and over, deeper and deeper, into the eternal suffering that is Hell.
+                </p>
+                <p>
+                As an immortal being, she does not perceive time, so it can’t be said how long the fall lasted. But it had a beginning, and an end. The end, is in pure darkness, tangible evil.
+                </p>
+                <p>
+                She can feel herself surrounded by beings of palpable hatred. Like a cornered animal, she brandishes her sword and presents her shield, which she still clutches, against the darkness. Terrified, but not afraid, Feuriel calls out to them, “Do unto me what you will! You cannot know the suffering I have already endured. Whatever you have for me, tis but a drop in the ocean, compared to what I have lost, where I have been. You will never know...”
+                </p>
+                <p>
+                Her sight starts to return. She wishes it hadn’t.
+                </p>
+            </em>
             <h4>Description</h4>
             <p>
-            Feuriel, or “Fury” as she can be called, is a being of contradictions. A stalwart of Heaven, in the service of Hell, she is both beautiful and grotesque. Her pale flawless skin is in places split open, exposing blackened flesh and silvery bones. Her alluring shape is interrupted by gaping sinews where her form is not whole. One eye continuously weeps blood. Her long, unkempt, jet-black hair frames intoxicating, unwavering eyes which change color to match her mood. From her delicate shoulders sprout the useless remnants of mighty wings, charred and broken.
+            Feuriel, or “Fury” as she can be called, is a being of contradictions. A stalwart of Heaven, conscripted to Hell, she is both beautiful and grotesque. Her pale flawless skin is in places split open, exposing blackened flesh and silvery bones. Her alluring shape is interrupted by gaping sinews where her form is not whole. One eye continuously weeps blood. Her long, unkempt, jet-black hair frames intoxicating, unwavering eyes which change color to match her mood. From her delicate shoulders sprout the useless remnants of mighty wings, charred and broken.
             </p>
             <p>
             Feuriel’s demeanor is similarly contradictory. She is both confident and scared, powerful and frail. She distrusts everyone yet will ally with anyone. The only person she fully trusts is herself, and that is the person most likely to deceive her. She clings to a moral code, keeping her word above all else, and keeping her suffering within, except to inflict suffering on those who deserve it through their choices and actions. She believes she is superior to others, yet she feels inferior. She peers intently at a world she tries not to see, lost while knowing her place, in a realm completely foreign yet strangely familiar. Her self-control dances with anger; hope oscillates with despair. Her faith is being tested and she doesn’t know if she wants it to prevail or not.
-            Feuriel is a paladin of Torm, the lawful good god of duty, loyalty, and obedience. She serves him still, though she is unsure how. She wields an ornate longsword and a brilliant bronze shield whose insignia has been melted beyond recognition. Her lithe body is draped with scraps of white clothing and fragmented armor.
+            </p>
+            <p>
+            Feuriel is a paladin of Torm, the lawful good God of duty, loyalty, and obedience. She still serves him, though she is unsure how. She wields an ornate longsword and a brilliant bronze shield whose insignia has been melted beyond recognition. Her lithe body is draped with scraps of white clothing and fragmented armor. She no longer has a halo.
             </p>
 
             <h3>Justin Corcoran's Character</h3>
