Clarify creation rules

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ h5 {
             </p>
 
             <p>
-            A 1st level character may have a maximum ability score of 18 for any given statistic, inclusive of racial bonuses.
+            Race and feat based ability score bonuses apply *after* the point buy, and as such are "free" as far as points are concerned.  However, a 1st level character may have a maximum ability score of 18 for any given statistic, inclusive of racial bonuses.
             </p>
             <p>
             Each time a character gains an additional level, an additional ability score point is gained.  This is in addition to any ability score improvement granted by the character's class progression and/or feats.  Unspent ability score points may be saved for use at a later time. 
@@ -329,7 +329,7 @@ h5 {
                 <tr><td>5</td><td>-4</td><td>2</td></tr>
             </table>
 
-            The <em>initial cost</em> represents the character point cost to buy the statistic at character creation time.  The <em>improvement cost</em> is the number of points required to raise the ability score from it's current value to the next highest value.
+            The <em>initial cost</em> represents the character point cost to buy the statistic at character creation time.  The <em>improvement cost</em> is the number of points required to raise the ability score from it's current value to the next highest value.  The improvement cost is calculated based on the value of the ability score without the racial or feat bonuses applied.
 
             <div class="flavour">
                 <strong>Grognak the Barbarian</strong> cares only for STR, CON, and DEX, so his player selects a starting score of 5 for WIS, INT, and CHA, giving him more character points to spend on his "important" ability scores, selecting 18 for STR and CON, and 16 for DEX.  The cost of Grognak's STR, CON, DEX, INT, WIS, and CHA add up to 19 + 19 + 12 - 4 - 4 - 4 = 38.<br/>Unfortunately Grognak was not smart, cunning, or well liked and later died after mistaking a large stone for a potato.  Had Grognak lasted until 3rd level he could have used those additional character points to improve his INT, WIS or CHA from a 5 to a 6, perhaps granting him the knowledge that the rock was not a potato, the common sense to not eat things you find on the ground, or the personality that would motivate people to assist him rather than point and laugh as he choked to an entirely avoidable death.
