--- a/index.html
+++ b/index.html
@@ -2233,6 +2233,7 @@ h5 {
             back up into his face! <em>Oh no, this is horrible!? How did Feuriel
                 get hit with this so many times!?  BLEAAUUUAHHHH! Good gawd, I
                 can’t stopppp! What’s going on up thhhh...heeuaahhhh!!!</em>
+            <div class="illustration"><img class="illustration" src="img/failed_imp2.png"></div>
             Bandito vomits violently from the consequential splash as the imp
             explodes his poisonous insides all over the floor and the splash
             consequently on Bandito. Obviously Feuriel takes the brunt of the
@@ -2262,6 +2263,7 @@ h5 {
 
             </p>
             <hr class="journal" />
+            <div class="illustration"><img class="illustration" src="img/book_of_rules.png"></div>
             <p>
             <em>So this is the famous book of rules - doesn’t seem to impressive to
                 me...</em>Bandito grasps what the conversation is all about - a book
@@ -2350,6 +2352,7 @@ h5 {
             <p>
             Little did he know that was just what was in store for him...
             </p>
+            <hr class="journal" />
             <p>
             The conversation with Panulis was scintillating, and it surely
             seems to be exactly as he expected it would be - they talk a lot
@@ -2470,6 +2473,7 @@ h5 {
             could listen to us small people. Time will tell - but at least
             they’re listening...for now...</em>
             </p>
+            <hr class="journal" />
             <p>
             He spent extra time helping the Mind flayer disguise himself, and
             thankfully his outfit looked proper. Everyone had some version of
@@ -2582,6 +2586,7 @@ h5 {
             you to help me, and this is the way to it, then I’m certain signing
             this will be the best course of action...” and signs the contract.
             </p>
+            <div class="illustration"><img class="illustration" src="img/jarnson.png"></div>
             <p>
             Jarnsen then puts down his glass, and turns his attention to
             Crokiak, “Interesting, I was just saying to myself, ‘God, I wish
