Better attribution on journal entries

--- a/index.html
+++ b/index.html
@@ -1832,7 +1832,7 @@ h5 {
             <h2>Journal</h2>
 
             <h3 class="break">Week 1</h3>
-            <strong><em>as observed by Verthandi</em></strong>
+            <strong><em>as observed by Verthandi (Chris Sweitzer)</em></strong>
             <p>
             Verthandi awoke to screaming. It sank into him slowly. Only a few
             voices at first, and then more and more. They varied as well. One
@@ -2176,7 +2176,7 @@ h5 {
             </p>
 
             <h3 class="break">Week 2</h3>
-            <strong><em>as observed by Bandito</em></strong>
+            <strong><em>as observed by Bandito (Chris Johnson)</em></strong>
             <p>
             <em>But surely she would have known this would happen if she
                 attacked them...how could she not?!  She must be very powerful
