--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
 hr.journal {
     column-span: all;
-    color: #fff;
-    margin-top: 3em;
-    margin-bottom: 1em;
+    border-top: 1px solid rgb(122, 32, 13, 0.1);
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
 
 p {
